--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
 .container {
     display: flex;
+    gap: 5px;
     padding: 10px;
     background-image: linear-gradient(to bottom right, #f2cd45 0%, #d74747 100%);
     box-shadow: 0px 0px 5px black;
@@ -22,9 +23,31 @@ body {
 }
 
 .container div {
+    width: 70px;
     background-color: black;
     color: white;
-    padding: 10px;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.container div h2 {
+    font-size: 2.75rem;
+    font-weight: bold;
+    font-family: monospace;
+    text-align: center;
+}
+
+.container div p {
+    font-size: 0.975rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 
